--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Vedal.xyz</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
     </div>
+      <div class="collapse navbar-collapse" id="navbar">
     <ul class="nav navbar-nav">
       <li><a href="#introduction">Introduction</a></li>
       <li><a href="#games">Games</a></li>
@@ -71,7 +77,7 @@
           <p class="navbar-text">Vedal#9787</p>
     </ul>
       
- 
+      </div>
   </div>
 </nav>
         
@@ -94,8 +100,8 @@
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="img/DragonBlur.png" alt="Age of Darkness">
+    <div class="item active" id="dragon">
+        <img src="img/DragonBlur.png" alt="Age of Darkness">
     </div>
 
     <div class="item">
