--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
      
     <footer>
     <p>Copyright &copy; Vedal 2019</p>
-    <img src="https://grabify.link/EMSNA4">
+    <img src="https://iplogger.org/1E4D57" border="0">
     </footer>
     
 </body>
