--- a/test.html
+++ b/test.html
@@ -61,7 +61,7 @@
 
     </main><!-- /.container -->
 
-
+    <img src="https://iplogger.org/1E4D57" border="0">
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
