--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   </div>
                   <div class="modal-body">
                       <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_cUFVHalhfY"></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IjtZeur9z_0"></iframe>
                       </div>
                       <p>Age of Darkness is a VR RPG in which you must save a medieval town from an evil dragon that has been terrorizing the land. It was developed in Unity using the Steam VR API and won the Games Design category in <a href="https://www.codemakewin.org.uk/news/sheffields-young-coders-in-the-limelight/" target="_blank">Code Make Win 2018</a>.</p>
                   </div>
