--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                       <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IjtZeur9z_0"></iframe>
                       </div>
-                      <p>Age of Darkness is a VR RPG in which you must save a medieval town from an evil dragon that has been terrorizing the land. It was developed in Unity using the Steam VR API and won the Games Design category in <a href="https://www.codemakewin.org.uk/news/sheffields-young-coders-in-the-limelight/" target="_blank">Code Make Win 2018</a>.</p>
+                      <p>Age of Darkness is a VR RPG in which you must save a medieval town from an evil dragon that has been terrorizing the land. It was developed in Unity using the Steam VR API and won the Games Design category in a local competition (ask for reference).</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -208,7 +208,7 @@
                     <h4 class="modal-title">World of Creatures</h4>
                   </div>
                   <div class="modal-body">
-                      <p>World of Creatures was originally made in 2017 for the <a href="https://www.codemakewin.org.uk/news/sheffields-first-digital-festival-celebrates-next-generation-talent/" target="_blank">Code Make Win 2017</a> competition where it won my age category for games, the games category overall and the competition overall.</p>
+                      <p>World of Creatures was originally made in 2017 for a local competition where it won the competition overall.</p>
                       <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-pimqOcy66A"></iframe>
                       </div>
@@ -260,7 +260,7 @@
                       <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pTbaIzUuGsY"></iframe>
                       </div>
-                      <p>The Rain of Night is a short exploration game developed as part of the CiDA qualification.</p>
+                      <p>The Rain of Night is a short exploration game developed as part of a digital products qualification.</p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
