--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <hr>
         <div class="feature">
             
-            <img src="img/NeuroSama.png" class="feature-img">
+            <img src="img/honesty.gif" class="feature-img">
             <h2>Neuro-sama</h2>
             <p>I built a neural network that learned to aim on the popular rhythm game osu! using Python. The entire project was livestreamed to Twitch almost 24/7 and quickly became a success after gaining over 150,000 views in 30 days. The neural network itself, dubbed "Neuro-sama", developed over time, starting off as a simple self-made feed forward neural network and eventually becoming a large convolutional neural network powered by Tensorflow. This was my first proper project with a neural network but will definitely not be the last. You can watch a video showcasing the neural network <a href="https://www.youtube.com/watch?v=w_ntORdHWsU" target="_blank">here</a>.</p>
         </div>
