--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#landingCarousel">Vedal.xyz</a>
+              <a class="navbar-brand" href="#landingCarousel" id="navbar-brand-logo">Vedal.xyz</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
