--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     
     <script src="parallax.min.js"></script>
+    <script src="bootstrap.js"></script>
     
     <title>Vedal</title>
     <script>
