--- a/competition/index.html
+++ b/competition/index.html
@@ -19,44 +19,89 @@
             </div>
         </nav>
 
-        <!-- <div id="leaderboard">
-            <div class="card bg-dark text-white">
+        <div id="leaderboard">
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/tomyomy.jpg'); background-position: center; background-size: cover;">
                 <div class="card-img-overlay">
                     <h4 class="pos">01</h4>
-                    <h5 class="card-title">Player Name</h5>
-                    <p class="card-text">- The cool guy</p>
-                    <p class="card-text">100 points</p>
+                    <h5 class="card-title">
+                        <img class="profile" src="img/profiles/tomyomy.png" width="25" height="25">
+                        Tomyomy</h5>
+                    <p class="card-text">- The Skill-based</p>
+                    <p class="card-text">0 points</p>
                 </div>
             </div>
 
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/wallaruski.jpg'); background-position: center; background-size: cover;">
                 <div class="card-img-overlay">
-                    <h4 class="pos">02</h4>
-                    <h5 class="card-title">Player Name</h5>
-                    <p class="card-text">- The cool guy</p>
-                    <p class="card-text">75 points</p>
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title">
+                        <img class="profile" src="img/profiles/wallaruski.png" width="25" height="25">
+                        Wallaruski</h5>
+                    <p class="card-text">- The Slightly Better than Bad Aimer</p>
+                    <p class="card-text">0 points</p>
                 </div>
             </div>
 
-            <div class="card bg-dark text-white">
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/terminator.jpg'); background-position: center; background-size: cover;">
                 <div class="card-img-overlay">
-                    <h4 class="pos">03</h4>
-                    <h5 class="card-title">Player Name</h5>
-                    <p class="card-text">- The cool guy</p>
-                    <p class="card-text">50 points</p>
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/terminator.png" width="25" height="25">
+                        Terminator</h5>
+                    <p class="card-text">- The Sad Man</p>
+                    <p class="card-text">0 points</p>
                 </div>
             </div>
-        </div> -->
 
-        <div class="card mb-3" style="max-width: 50%; margin: auto;">
-            <img src="img/test.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Coming Soon!</h5>
-              <p class="card-text">Be ready to enter the latest and hottest tournament in corona contingency town!</p>
-              <p class="card-text"><small class="text-muted">Last updated today</small></p>
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/trb.jpg'); background-position: center; background-size: cover;">
+                <div class="card-img-overlay">
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/trb.png" width="25" height="25">
+                        TRB</h5>
+                    <p class="card-text">- The Chad</p>
+                    <p class="card-text">0 points</p>
+                </div>
             </div>
-          </div>
-        
+
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/howitsdone.jpg'); background-position: center; background-size: cover;">
+                <div class="card-img-overlay">
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/howitsdone.png" width="25" height="25">
+                        HowITsDone</h5>
+                    <p class="card-text">- The CEO of Concrete</p>
+                    <p class="card-text">0 points</p>
+                </div>
+            </div>
+
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/idyia.jpg'); background-position: center; background-size: cover;">
+                <div class="card-img-overlay">
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/idyia.webp" width="25" height="25">
+                        Idyia</h5>
+                    <p class="card-text">- The Fucking Weeb</p>
+                    <p class="card-text">0 points</p>
+                </div>
+            </div>
+
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/berxy.jpg'); background-position: center; background-size: cover;">
+                <div class="card-img-overlay">
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/berxy.png" width="25" height="25">
+                        Berxy</h5>
+                    <p class="card-text">- The Shawty😈</p>
+                    <p class="card-text">0 points</p>
+                </div>
+            </div>
+
+            <div class="card bg-dark text-white" style="background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('img/bigmanguest.jpg'); background-position: center; background-size: cover;">
+                <div class="card-img-overlay">
+                    <h4 class="pos">01</h4>
+                    <h5 class="card-title"><img class="profile" src="img/profiles/bigmanguest.png" width="25" height="25">
+                        Big Man Guest</h5>
+                    <p class="card-text">- The Mediocre</p>
+                    <p class="card-text">0 points</p>
+                </div>
+            </div>
+        </div>
         
         <script src="" async defer></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
